2012-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/tcommand.py:
	  Don't chain up for debug/warning, should fix wrong line
	  numbers in log output.  info() was right, and didn't get
	  chained here.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Make it possible to specify host always, and either port/db
	  or both.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	* python/mushin/common/app.py:
	  Add options for host and port.  Pass them properly to
	  the servers.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/logcommand.py:
	  Fix log depth

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/list.py:
	* python/mushin/command/main.py:
	* python/mushin/common/app.py:
	* python/mushin/common/tcommand.py:
	* python/mushin/model/couch.py:
	* python/mushin/extern (svn:externals):
	  Update to new python-command.
	  Use TwistedCommand and ReactorCommand where appropriate.
	  Use authenticator for CouchDB client.
	  Store servers used by getServer and getNewServer so that
	  they reuse the same instance, and hence the same agent and
	  cookies.
	  Both authenticating with user/pass and then getting a session
	  and using authcookies now works.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Show 8 characters for id after new collision.

2012-09-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/logcommand.py:
	  Hook up warning and error too.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/common/app.py:
	  Use kwargs more.

2012-09-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Clean up whitespace.
